[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-decay-drift"
version = "0.1.0"
description = "Measure and monitor context drift in LLM conversations across sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Suman", email = "suman@example.com" },
]
keywords = [
    "llm",
    "context-drift",
    "context-decay",
    "chatbot",
    "monitoring",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
semantic = ["scikit-learn>=1.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Suman-Git-DS/ContextDecayDrift"
Documentation = "https://github.com/Suman-Git-DS/ContextDecayDrift#readme"
Repository = "https://github.com/Suman-Git-DS/ContextDecayDrift"
Issues = "https://github.com/Suman-Git-DS/ContextDecayDrift/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/context_decay_drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/context_decay_drift", "README.md", "LICENSE"]
